# exprforge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: ast.rs  cli.rs  environment.rs  evaluator.rs  functions.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  rpn.rs  units.rs
tests/: integration.rs
